--- a/app/assets/javascripts/views/users/state.html
+++ b/app/assets/javascripts/views/users/state.html
@@ -1,6 +1,27 @@
 <entete ng-if="user!=null" ></entete>
-  <div class="container">
-    <div class="row">
+  <div class="container" style="margin-top:20px;">
+    <div class="row" >
       <h5> L'état de toute l'équipe </h5>
+    </div>
+    <div class="row" >
+      <div class="col-md-12">
+        <table class="table table-hover ">
+          <thead class="table-primary" >
+            <tr>
+              <th scope="col"><a ng-click="set('date_debut')" > Nom & Prénom  </a></th>
+              <th scope="col"><a ng-click="set('motifAb')" > Date début</a></th>
+              <th scope="col"><a ng-click="set('date_fin')" > Date fin </a></th>
+            </tr>
+          </thead>
+          <tbody class="">
+            <tr ng-repeat="conge in conges |orderBy:orderByField:reverseSort" >
+              <td>{{conge.date_debut}} </td>
+              <td>{{conge.date_fin}}</td>
+              <td>{{conge.motifAb}}</td>
+              <td>{{conge.etat}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
