--- a/app/assets/javascripts/template/users/user_table_demands.html
+++ b/app/assets/javascripts/template/users/user_table_demands.html
@@ -3,6 +3,7 @@
    <div class="col-md-12">
      <h5> Liste de vos demandes </h5>
    </div>
+   <hr>
    <div class="col-md-12">
      <table class="table table-hover ">
        <thead class="table-primary" >
@@ -21,15 +22,17 @@
            <td>{{conge.motifAb}}</td>
            <td>{{conge.etat}}</td>
            <td>
-             <a  style="color :#94d2e6;" ng-click="getModel(conge.id)" data-toggle="modal" data-target="#exampleModal" ><i class="fa fa-eye"></i></a>
-             <a style="color :#94d2e6;" >   <i class="fa fa-pencil-square-o"></i> </a>
-             <a  style="color :#c1224f;"data-toggle="modal" data-target="#deletDemandeModal" ng-click="getModel(conge.id)">   <i class="fa fa-remove"></i> </a>
+             <a  style="color :#94d2e6;" ng-if="conge.etat != 'Accepté'" ng-click="getModel(conge.id)" data-toggle="modal" data-target="#exampleModal" ><i class="fa fa-eye"></i></a>
+             <a style="color :#94d2e6;"  ng-if="conge.etat != 'Accepté'" data-toggle="modal" data-target="#updateDemandeModal" ng-click="getModel(conge.id)">   <i class="fa fa-pencil-square-o"></i> </a>
+             <a  style="color :#c1224f;" ng-if="conge.etat != 'Accepté'" data-toggle="modal" data-target="#deletDemandeModal" ng-click="getModel(conge.id)">   <i class="fa fa-remove"></i> </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
+ <hr>
+ <ng-Welcome user="user"></ng-Welcome>
 </div>
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -66,12 +69,55 @@
       <div class="modal-body">
           Voulez-vous vraiment supprimer cette demande ?
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer" >
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="deletDemande(myModel[0].id)">Supprimer</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="deleteDemande(myModel[0].id)">Supprimer</button>
       </div>
     </div>
   </div>
 </div>
+<div class="modal fade" id="updateDemandeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modifier cette demande</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form name="myForm" ng-submit="sendDemande()">
+          <div class="modal-body">
+              <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
+                Demande enregistré :) !
+              </div>
+              <div class="alert alert-danger col-md-5" ng-if="showMsgError" role="alert">
+                échec d'envoi !
+              </div>
+              <div class="row col-md-12">
+                <div class="col-md-6">
+                  <label class=" col-form-label">Date début</label>
+                  <input required ng-model="dateD" class="form-control" type="date">
+                </div>
+                <div class="col-md-6">
+                  <label class="col-form-label">Date fin</label>
+                  <input required ng-model="dateF" class="form-control" type="date">
+                </div>
+                <hr>
+                <div class="col-md-12">
+                  <label class="col-form-label">Motif d'absence</label>
+                  <input type="text "class="form-control" required ng-model="motifAb" id="exampleFormControlTextarea1" rows="3"></input>
+                </div>
+                <div class="modal-footer" >
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                  <button type="button" class="btn btn-success" data-dismiss="modal" ng-click="deleteDemande(myModel[0].id)">Modifier</button>
+                </div>
+              </div>
+              <p></p>
+          </div>
+      </form>
+      </div>
 
-<ng-Welcome user="user"></ng-Welcome>
+    </div>
+  </div>
+</div>
