--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,3 +77,11 @@ h5 {
 font-family: "Roboto";
 font-weight: lighter;
 }
+
+//
+.nav-tabs a {
+  color: #383838;
+}
+.tab-pane{
+   margin-top: 5%;
+}
