--- a/app/assets/javascripts/template/users/entete.html
+++ b/app/assets/javascripts/template/users/entete.html
@@ -6,10 +6,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto" >
       <li class="nav-item active">
-        <a class="nav-link" href="/home">Accueil <span class="sr-only">(current)</span></a>
+        <a class="nav-link" ng-if="user.role =='user' "  href="/home">Accueil <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/State">L'état de l'équipe </a>
+        <a class="nav-link" ng-if="user.role =='admin' " href="/AdminHome">Accueil <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" ng-if="user.role =='user' " href="/State">L'état de l'équipe </a>
       </li>
     </ul>
     <ul class="navbar-nav ">
